adjusted styles, fixed button visibility issue

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,7 @@
 body {
     background-image: url("../images/hogwarts-bg.jpg");
     background-size: 120%;
+    font-family: 'Cinzel Decorative', cursive;
 }
 
 h1,
@@ -21,6 +22,13 @@ h3 {
     cursor: copy;
 }
 
+em {
+    font-family: 'Cinzel Decorative', cursive;
+    font-weight: 700;
+    font-size: 1.2em;
+    color: rgb(209, 4, 4);
+}
+
 .card-body {
     padding: 5px;
     text-align: center;
@@ -30,10 +38,37 @@ h3 {
     margin: 0;
 }
 
+.nameText,
+.healthText {
+    font-weight: 700;
+    font-size: 25px;
+}
+
+#attackBtn,
+#restartBtn {
+    font-weight: 700;
+    font-size: 20px;
+}
+
+.nameText {
+    padding-top: 10px;
+    margin-bottom: 0;
+}
+
+#opponentCard p,
+#heroCard p {
+    margin-bottom: 0;
+}
+
 .row {
     text-align: center;
 }
 
 #attackBtn {
     margin-top: 8em;
+}
+
+#narrationText,
+#instruction {
+    font-family: 'Lancelot', cursive;
 }
